# OpenSweetEditor

./: CMakeLists.txt  PULL_REQUEST.md  README.md  README_zh.md  SweetEditor.Avalonia.sln
docs/en/: api-platform-android.md  api-platform-avalonia.md  api-platform-winforms.md  api-platform.md  platform-implementation-standard.md
docs/zh/: api-platform-android.md  api-platform-avalonia.md  api-platform-winforms.md  api-platform.md  platform-implementation-standard.md
platform/Android/: PYTHON_INTEGRATION.md  gradle.properties
platform/Android/app/: build.gradle
platform/Android/gradle/: libs.versions.toml
platform/Android/sweeteditor/: build.gradle
platform/Apple/: .gitignore  Makefile  Package.swift  README.md
platform/Apple/Examples-MacOS/: Package.swift
platform/Apple/Sources/SweetEditorMacOS/: SweetEditorViewMacOS.swift
platform/Apple/Sources/SweetEditoriOS/: SweetEditorViewiOS.swift
platform/Apple/Tests/SweetEditorMacOSTests/: EditorSettingsParityTests.swift  SweetEditorMacOSTests.swift
platform/Apple/binaries/: README.md
platform/Apple/scripts/: build_native_xcframework.sh  xcode_prebuild.sh
platform/Avalonia/: .gitignore  Avalonia.sln  COMPILATION_VERIFICATION_REPORT.md  COMPLETE_COMPILATION_VERIFICATION_REPORT.md  CROSS_PLATFORM_ALIGNMENT_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.demo.en.md  README.demo.md  VERIFICATION_SUMMARY.md  nuget.config  verify_build.sh
platform/Avalonia/Demo/: App.axaml  App.axaml.cs  App.cs  Demo.csproj  MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  PerfGraphControl.cs  Program.cs  README.md
platform/Avalonia/Demo.Android/: AndroidManifest.xml  App.cs  Demo.Android.csproj  MainActivity.cs  README.en.md  README.md  termux-dotnet-android-build.en.md  termux-dotnet-android-build.md
platform/Avalonia/Demo.Android/Platform/: AndroidDemoPlatformServices.cs
platform/Avalonia/Demo.Desktop/: App.cs  Demo.Desktop.csproj  Program.cs  README.en.md  README.md
platform/Avalonia/Demo.Desktop/Platform/: DesktopDemoPlatformServices.cs
platform/Avalonia/Demo.Mac/: App.cs  Demo.Mac.csproj  Program.cs  README.en.md  README.md
platform/Avalonia/Demo.Mac/Platform/: MacDemoPlatformServices.cs
platform/Avalonia/Demo.Shared/: Demo.Shared.csproj  MainView.cs  README.en.md  README.md
platform/Avalonia/Demo.Shared/Decoration/: DemoDecorationProvider.cs  DemoSweetLineRuntime.cs
platform/Avalonia/Demo.Shared/Editor/: DemoCompletionProvider.cs  DemoIconProvider.cs  DemoInlineSuggestionListener.cs  DemoMetadata.cs  DemoNewLineActionProvider.cs  DemoSelectionMenuItemProvider.cs  DemoSelectionMenuListener.cs
platform/Avalonia/Demo.Shared/Host/: DeferredMainViewHost.cs  DemoPlatformServices.cs
platform/Avalonia/Demo.Shared/Performance/: ObjectPool.cs  PerformanceBenchmark.cs
platform/Avalonia/Demo.Shared/SweetLine/: Models.cs  SweetLine.cs  SweetLineNative.cs
platform/Avalonia/Demo.Shared/UI/: KeyboardShortcutsDialog.cs  LoadingIndicator.cs  NotificationPanel.cs  WelcomeOverlayView.cs
platform/Avalonia/Demo.Shared/ViewModels/: DemoSettings.cs  MainViewModel.cs
platform/Avalonia/Demo.iOS/: App.cs  Demo.iOS.csproj  Program.cs  README.en.md  README.md
platform/Avalonia/Demo.iOS/Platform/: iOSDemoPlatformServices.cs
platform/Avalonia/Demo/Assets/: example.cpp
platform/Avalonia/SweetEditor/: CompletionProviderManager.cs  DecorationProviderManager.cs  EditorCompletion.cs  EditorControl.axaml  EditorControl.axaml.cs  EditorCore.cs  EditorDecoration.cs  EditorIconProvider.cs  EditorInlineSuggestion.cs  EditorKeyMap.cs  EditorNewLine.cs  EditorPerf.cs  EditorPlatformBehavior.cs  EditorPrimitives.cs  EditorProtocol.cs  EditorRenderer.cs  EditorRendererOptimized.cs  EditorSelectionMenu.cs  EditorSettings.cs  EditorTextStyle.cs  EditorTypes.cs  FrameRateMonitor.cs  GlyphRunCache.cs  HighFpsBenchmark.cs  LruCache.cs  NativeMethods.cs  NewLineActionProviderManager.cs  PerformanceReport.cs  README.md  RenderBufferPool.cs  RenderOptimizer.cs  SweetEditor.csproj  SweetEditorControl.cs  SweetEditorController.cs
platform/Avalonia/Tests/: EditorControlTests.cs  Tests.csproj
platform/OHOS/: build-profile.json5  oh-package-lock.json5
platform/OHOS/AppScope/: app.json5
platform/OHOS/demo/: .gitignore  oh-package-lock.json5  oh-package.json5
platform/OHOS/sweeteditor/: CHANGELOG.md  README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
platform/Swing/demo/: build.gradle
platform/Swing/sweeteditor/: build.gradle
platform/WinForms/: WinForms.sln
platform/WinForms/Demo/: Demo.csproj  Form1.cs
platform/WinForms/SweetEditor/: EditorCompletion.cs  EditorControl.cs  EditorCore.cs  EditorDecoration.cs  EditorNewLine.cs  EditorProtocol.cs  EditorRenderer.cs  EditorSettings.cs  README.md  SweetEditor.csproj  SweetEditorControl.cs
platform/_res/files/: example.py
platform/_res/syntaxes/: python.json
prebuilt/ios/arm64/: libsweeteditor.dylib  libsweetline.dylib
prebuilt/ios/device-arm64/: libsweeteditor.dylib
prebuilt/ios/simulator-arm64/: libsweeteditor.dylib  libsweetline.dylib
prebuilt/osx/arm64/: libsweeteditor.dylib  libsweetline.dylib
prebuilt/osx/x86_64/: libsweetline.dylib
prebuilt/wasm/: sweetline.js  sweetline.wasm
scripts/: MergeStaticLib.cmake  build-release.ps1  build-release.sh  build-shared.sh  start-winforms.ps1
src/core/: c_api.cpp  c_wrapper.hpp  decoration.cpp  document.cpp  editor_core.cpp  editor_types.cpp  foundation.cpp  gesture.cpp  interaction.cpp  json_serde.hpp  keymap.cpp  layout.cpp  logging.h  render_composer.cpp  visual.cpp
src/include/: c_api.h  decoration.h  document.h  editor_core.h  editor_types.h  foundation.h  gesture.h  interaction.h  keymap.h  layout.h  linked_editing.h  macro.h  render_composer.h  undo.h  utility.h  visual.h
tests/: CMakeLists.txt  editor_composition.cpp  editor_core_editing.cpp  editor_linked_editing.cpp  editor_render.cpp  editor_scroll.cpp  editor_undo_redo.cpp  gesture.cpp  interaction_behavior.cpp  keymap.cpp  layout_decorations.cpp  layout_mapping.cpp  performance_baseline.cpp
(+151 files in other folders)
